# wildberries_bot_private

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_bot  Dockerfile_celery  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
data/: buttons.csv  destination.csv  storehouse.csv
infra/: docker-compose.yaml
nginx/: default.conf
tgbot/: 10.xlsx  100157271.xlsx  153855287.xlsx  158734578.xlsx  36704403.xlsx  76679908.xlsx  Dockerfile  TreeData.xlsx  test.xlsx
tgbot/.data/logs/: bot.log.2023-06-28
tgbot/bot/: admin.py  apps.py  error_handler.py  handlers.py  keyboards.py  models.py  utils.py
tgbot/bot/constants/: actions.py  callback.py  states.py  text.py
tgbot/bot/conversations/: command_application.py  main_application.py  menu_application.py
tgbot/bot/core/: logging.py  settings.py
tgbot/bot/management/commands/: bot.py
tgbot/bot/migrations/: 0001_initial.py
tgbot/botmanager/: admin.py  apps.py  menu_application.py  models.py  tasks.py  urls.py  views.py
tgbot/botmanager/templates/: statistics.html
tgbot/botmanager/templates/admin/: base.html  base_site.html  index.html
tgbot/parser/: acceptance_rate.py  clientsession.py  constants.py  jobs.py  models.py  position_parser.py  residue_parser.py
tgbot/parser/management/commands/: import_data_from_csv.py
tgbot/parser/migrations/: 0001_initial.py
tgbot/parser/tests/: fixtures.py  test_position_parser.py
tgbot/templates/admin/botmanager/mailing/: change_form.html  submit_line.html
tgbot/tgbot/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
tgbot/ui_constructor/: admin.py  apps.py  models.py
tgbot/users/: admin.py  apps.py  models.py
tgbot/users/management/commands/: superuser.py
