[tool.poetry]
name = "wildberries-bot-team-1"
version = "0.1.0"
description = ""
authors = ["т"]
readme = "README.md"
packages = [{include = "wildberries_bot_team_1"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
python-telegram-bot = "^20.3"
flake8-pyproject = "^1.2.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
autopep8 = "^2.0.2"
pre-commit = "^3.3.2"
add-trailing-comma = "^2.4.0"
mypy = "^1.3.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ".venv"
max-complexity = 10
max-line-length = 79
extend-ignore = """
        W503,
        E203,
        E701,
    """
    per-file-ignores = """
        __init__.py: F401
        ./src/*: E402
        settings.py: E501
    """

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true
use_parentheses = true
